리팩토링 :프로젝트  구조 변경 및 커스텀 훅 추가
prop결합도 낮추고 커스텀 훅을 통한 맵 관리

--- a/src/style/card.css
+++ b/src/style/card.css
@@ -55,10 +55,10 @@
 }
 
 .active>.page-link, .page-link.active {
-  background-color: var(--info-color);
-  border-color: var(--info-color);
+  background-color: var(--info-color) !important;
+  border-color: var(--info-color) !important;
 }
-.page-item:not(:first-child) .page-link{
+.page-item .page-link{
   background-color: var(--card-color);
   border-color: var(--card-color);
   color: white;
